code about-me 2

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="about-me container">
 				<div class="row-1">
 					<div>
-						<h1>About Me</h1>
+						<h1 class="title-main">About Me</h1>
 						<p>This is a Bootstrap v4.2.1 CSS Template for you. Edit and use this layout for your site. Updated on 21 May 2019 for repeated main menu HTML code.</p>
 					</div>
 				</div>
@@ -52,19 +52,23 @@
 						<img src="images/left-image.jpg" class="card-image">
 					</div>
 					<div class="content">
-						<h2>Reflux HTML CSS Template</h2>
-						<p>Donec tristique feugiat lacus, at sollicitudin nunc euismod sed. Mauris viverra, erat non sagittis gravida, elit dui mollis ante, sit amet eleifend purus
+						<div>
+							<h2>Reflux HTML CSS Template</h2>
+							<p>Donec tristique feugiat lacus, at sollicitudin nunc euismod sed. Mauris viverra, erat non sagittis gravida, elit dui mollis ante, sit amet eleifend purus
 							ligula eget eros. Sed tincidunt quam vitae neque pharetra dignissim eget ut libero.</p>
-						<button class="btn">Read more</button>
+							<button class="btn">Read more</button>
+						</div>
 					</div>
 				</div>
 
 				<div class="row-3">
 					<div class="content">
-						<h2>Sed sagittis rhoncus velit</h2>
-						<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum fermentum eleifend nibh, vitae sodales elit finibus pretium.
+						<div>
+							<h2>Sed sagittis rhoncus velit</h2>
+							<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum fermentum eleifend nibh, vitae sodales elit finibus pretium.
 							 Suspendisse potenti. Ut sollicitudin risus a sollicitudin semper.</p>
-						<button class="btn">Read more</button>
+							<button class="btn">Read more</button>
+						</div>
 					</div>
 					<div class="img">
 						<img src="images/right-image.jpg" class="card-image">
