--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="https://kit.fontawesome.com/aa65c1dd72.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="my-work.css">
 </head>
 <body>
 	<section id="header">
@@ -125,6 +126,81 @@
 						</div>
 					</div>
 				</div>
+			</div>
+
+			<div class="my-work">
+				<div class="title">
+					<h1 class="title-main">My Work</h1>
+					<p>Aenean sollicitudin ex mauris, lobortis lobortis diam euismod sit amet. Duis ac elit vulputate, lobortis arcu quis, vehicula mauris.</p>
+				</div>
+
+					<div class="span">
+						<span class="select-item">All</span>
+						<span>People</span>
+						<span>Nature</span>
+						<span>Animals</span>
+					</div>
+
+					
+					<div class="container">
+
+						<div class="img" style="background-image: url(images/portfolio-01.jpg)">
+							<div class="figure">
+								<div>
+									<i class="fas fa-search"></i>
+									<h2>First title</h2>
+									<small>Customize anything</small>
+								</div>
+							</div>
+						</div>
+						<div class="img" style="background-image: url(images/portfolio-02.jpg)">
+							<div class="figure">
+								<div>
+									<i class="fas fa-search"></i>
+									<h2>First title</h2>
+									<small>Customize anything</small>
+								</div>
+							</div>
+						</div>
+						<div class="img" style="background-image: url(images/portfolio-03.jpg)">
+							<div class="figure">
+								<div>
+									<i class="fas fa-search"></i>
+									<h2>First title</h2>
+									<small>Customize anything</small>
+								</div>
+							</div>
+						</div>
+						<div class="img" style="background-image: url(images/portfolio-04.jpg)">
+							<div class="figure">
+								<div>
+									<i class="fas fa-search"></i>
+									<h2>First title</h2>
+									<small>Customize anything</small>
+								</div>
+							</div>
+						</div>
+						<div class="img" style="background-image: url(images/portfolio-05.jpg)">
+							<div class="figure">
+								<div>
+									<i class="fas fa-search"></i>
+									<h2>First title</h2>
+									<small>Customize anything</small>
+								</div>
+							</div>
+						</div>
+						<div class="img" style="background-image: url(images/portfolio-06.jpg)">
+							<div class="figure">
+								<div>
+									<i class="fas fa-search"></i>
+									<h2>First title</h2>
+									<small>Customize anything</small>
+								</div>
+							</div>
+						</div>
+
+					</div>
+				
 			</div>
 
 		</div>
