code contact-me 2

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 
 					
 					<div class="container">
+
 						<div class="block-img">
 							<div class="img img-1" style="background-image: url(images/portfolio-01.jpg)">
 								<div class="figure">
@@ -212,7 +213,6 @@
 									</div>
 								</div>
 							</div>
-	
 						</div>
 						
 					</div>
@@ -221,7 +221,7 @@
 
 			<div class="contact-me">
 				<div class="title">
-					<h1>Contact Me</h1>
+					<h1 class="title-main">Contact Me</h1>
 					<p>Fusce eget nibh nec justo interdum condimentum. Morbi justo ex, efficitur at ante ac, tincidunt maximus ligula. Lorem ipsum dolor sit amet, 
 						consectetur adipiscing elit.</p>
 				</div>
